# auto-publish

./: .gitignore  Makefile  README.md  README_JAVA.md  README_XIAOHONGSHU.md  example.py  install.bat  pom.xml  pyproject.toml  requirement.txt  requirements.txt  test copy.py  test.py  xiaohongshu-publisher-plan.md
data/cookies/: main_account.json
data/db/: posts.db
src/main/java/: XhsPublisher.java  XiaohongshuPublisher.java  ZhihuPublisher.java
src/test/java/: XiaohongshuPublisherTest.java
tests/: example.py  example1.py  pythontest.py  test copy.py  test.py  test_ws.py
tests/imgrender/: test_imgrender.py
tests/vcms/: sip_data.json  test_ebidding.py  test_sip.py
tests/xhs/: test_xhs_publish.py  xhs_storage_state.json
tests/zhihu/: test_zhihu_publish.py  test_zhihu_publish_optimized.py  zhihu_storage_state.json
